# fe-sentry

./: .gitignore  .gitmodules  Makefile  README.md  bootstrap.sh  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json
client/: package.json
client/src/: main.ts
server/: handler.py  kafka_client.py  logger.py  main.py  pyproject.toml
